@@ -1046,6 +1046,13 @@ module Druid
       end
     end
 
+    def elements(name, tag, identifier={:index => 0}, &block)
+      define_method("#{name}_elements") do
+        return call_block(&block) if block_given?
+        elements_for(tag, identifier.clone)
+      end
+    end
+
     #
     # adds two methods - one to retrieve a svg, and another to check
     # svg's existence.
